Add Affine tutorial and restructure optics track into sessions (#256)
* Add Affine tutorial and restructure optics track into sessions

- Add Tutorial04_AffineBasics with 7 exercises covering optional field access
- Restructure optics_track.md into 6 lunch-break sessions (~20-25 min each)
- Update ch1_intro.md hierarchy diagram to include Affine optic
- Add Further Reading section to affine.md with Java-friendly resources
- Fix composition table: Lens + Prism = Affine (not Traversal)
- Add Affine to optics cheat sheet
- Renumber tutorials 04-09 to 05-11 to accommodate new Affine tutorial
- Update all internal cross-references and Javadoc comments

Add Affine optic for zero-or-one element focus

Affine sits between Lens (exactly one) and Prism (zero-or-one with build).
Key additions:
- Affine.java with full composition support (andThen for all optic types)
- Lens.andThen(Prism) and Prism.andThen(Lens) now return Affine
- Affines utility class with common affines (some, just, nullable, listHead, etc.)
- OpticOps fluent API support for Affine operations
- Comprehensive tests achieving 100% coverage for org.higherkindedj.optics
- Updated examples and tutorials for the new composition semantics

* tidy up